--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.box{
+    border-radius: 10px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    width: 900px;
+    height: 250px;
+    display: flex;
+    margin: 10px;
+}
 .card {
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -49,4 +57,6 @@
     padding: 10px;
     border-radius: 5px;
   }
-  
+  .size{
+    font-size: 25px;}
+ 
