--- a/style.css
+++ b/style.css
@@ -1,62 +1,93 @@
-.box{
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 900px;
-    height: 250px;
-    display: flex;
-    margin: 10px;
+.box {
+  display: flex;
+  justify-content: center;
+  border-radius: 3%;
+  background-color: rgb(243, 243, 243);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 90%;
+  height: 350px;
+  margin: 10px;
 }
 .card {
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 150px;
-    height: 200px;
-    display: inline-block;
-    margin: 10px; 
-  }
-  .littleCard{
-    border-radius: 10px;
-    background-color: rgb(192, 193, 193);
-    width: 120px;
-    height: 50px;
-  }
-  .iconCard{
-    border-radius: 10px;
+  border-radius: 10px;
+  background-color: white;
+  box-shadow: 0 4% 8% 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  width: 20%;
+  height: 80%;
+  display: inline-block;
+  margin: auto;
+}
+.littleCard {
+  margin-top: 10px;
+  border-radius: 10px;
+  background-color: rgb(243, 243, 243);
+  width: 85%;
+  height: 25%;
+}
+.iconCard {
+  border-radius: 15px;
+}
 
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-  
-  .container {
-    padding: 2px 16px;
-  }
-  .red{ 
-    color: red;
-    background-color: lightpink;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .purple{ 
-    color: purple;
-    background-color: rgb(255, 85, 224);
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .yellow{ 
-    color: rgb(255, 208, 0);
-    background-color: rgb(235, 254, 151);
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .blue{ 
-    color: blue;
-    background-color: lightblue;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .size{
-    font-size: 25px;}
- 
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  padding: 2px 16px;
+}
+.red {
+  color: red;
+  background-color: lightpink;
+  padding: 30px;
+  border-radius: 15px;
+}
+.purple {
+  color: purple;
+  background-color: rgb(255, 85, 224);
+  padding: 30px;
+  border-radius: 15px;
+}
+.yellow {
+  color: rgb(255, 208, 0);
+  background-color: rgb(235, 254, 151);
+  padding: 30px;
+  border-radius: 15px;
+}
+.blue {
+  color: blue;
+  background-color: lightblue;
+  padding: 30px;
+  border-radius: 15px;
+}
+.size {
+  margin: 30px 0;
+  font-size: 250%;
+}
+.margin {
+  margin-top: 45px;
+}
+.percentage {
+  margin: 0;
+  display: flex;
+  justify-content: left;
+  font-size: 170%;
+  font-weight: bold;
+}
+
+h4 {
+  margin: 20px 0;
+}
+p {
+  margin: 4%;
+  font-size: 110%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+i:hover {
+  -webkit-text-stroke: 1px;
+}
