--- a/style.css
+++ b/style.css
@@ -2,8 +2,9 @@
 
     display: flex;
     background-color: #F8F9FB;
-    width: 500px;
-    height: 150px;
+    width: 750px;
+    height: 175px;
+    position: relative;
    
   }
 
@@ -11,8 +12,8 @@
 
   display: flex;
   background-color: rgb(238, 18, 18);
-  width: 100px;
-  height: 125px;
+  width: 200px;
+  height: 150px;
   margin: auto;
   border-radius: 10px;
   justify-content: center;
@@ -22,8 +23,8 @@
 
   display: flex;
   background-color: rgb(238, 18, 18);
-  width: 100px;
-  height: 125px;
+  width: 200px;
+  height: 150px;
   margin: auto;
   border-radius: 10px;
   justify-content: center;
@@ -33,9 +34,32 @@
 
   display: flex;
   background-color: rgb(238, 18, 18);
-  width: 100px;
-  height: 125px;
+  width: 200px;
+  height: 150px;
   margin: auto;
   border-radius: 10px;
   justify-content: center;
+}
+
+.bi-slack {
+
+  font-size: 40px;
+  padding-top: 10px;
+  position: relative;
+  top: 0px;
+  right: 40px;
+  display: flex;
+  
+  
+  
+
+}
+
+.textPosition {
+
+  position: relative; 
+  top: 5px;
+  right: 20px;
+
+  
 }
