--- a/style.css
+++ b/style.css
@@ -58,11 +58,28 @@
   position: relative; 
   top: 5px;
   right: 20px;
+  display: flex;
 
   
 }
 
 .textPosition {
 
-  
+position: absolute;
+top: 75px;
+text-align: center;
+color: grey;
+
 }
+
+/* .circleBlue {
+
+  background-color: #0079BF;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  position: relative;
+  top: 10px;
+  right: 60px;
+  display: flex;
+} */
