--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@
 
 }
 
-.titlePosition {
+.titlePositionSlack {
 
   position: relative; 
   top: 5px;
@@ -69,10 +69,11 @@ position: absolute;
 top: 75px;
 text-align: center;
 color: grey;
+display: flex;
 
 }
 
-/* .circleBlue {
+.circleBlue {
 
   background-color: #0079BF;
   width: 50px;
@@ -82,4 +83,14 @@ color: grey;
   top: 10px;
   right: 60px;
   display: flex;
-} */
+}
+
+.bi-trello {
+
+  color: white;
+  font-size: 25px;
+  position: absolute;
+  top: 11px;
+  right: 13px;
+  
+}
