--- a/style.css
+++ b/style.css
@@ -1,62 +1,76 @@
-.box{
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 900px;
-    height: 250px;
-    display: flex;
-    margin: 10px;
+.thirdBox {
+  display: flex;
+  justify-content: space-around;
+  border-radius: 3%;
+  background-color: rgb(243, 243, 243);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 60%;
+  height: 110px;
+  margin: 10px;
+  padding: 2px 16px;
 }
-.card {
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
-    width: 150px;
-    height: 200px;
-    display: inline-block;
-    margin: 10px; 
-  }
-  .littleCard{
-    border-radius: 10px;
-    background-color: rgb(192, 193, 193);
-    width: 120px;
-    height: 50px;
-  }
-  .iconCard{
-    border-radius: 10px;
+.thirdCard {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px;
+  background-color: white;
+  transition: 0.3s;
+  width: 25%;
+  height: 85%;
+  margin: auto;
+  padding: 2px 16px;
+  white-space: nowrap;
+}
 
-  }
-  
-  .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  }
-  
-  .container {
-    padding: 2px 16px;
-  }
-  .red{ 
-    color: red;
-    background-color: lightpink;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .purple{ 
-    color: purple;
-    background-color: rgb(255, 85, 224);
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .yellow{ 
-    color: rgb(255, 208, 0);
-    background-color: rgb(235, 254, 151);
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .blue{ 
-    color: blue;
-    background-color: lightblue;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  .size{
-    font-size: 25px;}
- 
+.thirdCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.thirdSize {
+  margin: 30px 0;
+  font-size: 250%;
+}
+.thirdMargin {
+  margin-top: 45px;
+}
+
+.thirdBlue {
+  color: white;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 15px;
+  background-color: blue;
+}
+.thirdGreen {
+  color: white;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 15px;
+  background-color: green;
+}
+.thirdOrange {
+  color: white;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 15px;
+  background-color: orange;
+}
+.dots {
+  align-self: self-start;
+  margin: 0 0 80px 30px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+h2 {
+  margin: 4%;
+  font-size: 15px;
+  font-weight: normal;
+}
+b {
+  font-size: 30px;
+}
