--- a/style.css
+++ b/style.css
@@ -1,3 +1,66 @@
+
+.thirdBox {
+  display: flex;
+  justify-content: space-around;
+  border-radius: 3%;
+  background-color: rgb(243, 243, 243);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 60%;
+  height: 110px;
+  margin: 10px;
+  padding: 2px 16px;
+}
+.thirdCard {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 10px;
+  background-color: white;
+  transition: 0.3s;
+  width: 25%;
+  height: 85%;
+  margin: auto;
+  padding: 2px 16px;
+  white-space: nowrap;
+}
+
+.thirdCard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.thirdSize {
+  margin: 30px 0;
+  font-size: 250%;
+}
+.thirdMargin {
+  margin-top: 45px;
+}
+
+.thirdBlue {
+  color: white;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 15px;
+  background-color: blue;
+}
+.thirdGreen {
+  color: white;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 15px;
+  background-color: green;
+}
+.thirdOrange {
+  color: white;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 15px;
+  background-color: orange;
+}
+.dots {
+  align-self: self-start;
+  margin: 0 0 80px 30px;
+
 .box {
   display: flex;
   justify-content: center;
@@ -81,6 +144,7 @@ h4 {
 p {
   margin: 4%;
   font-size: 110%;
+
 }
 
 body {
@@ -88,6 +152,16 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+h2 {
+  margin: 4%;
+  font-size: 15px;
+  font-weight: normal;
+}
+b {
+  font-size: 30px;
+
 i:hover {
   -webkit-text-stroke: 1px;
+
 }
