--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 .thirdBox {
   display: flex;
   justify-content: space-around;
@@ -60,6 +59,7 @@
 .dots {
   align-self: self-start;
   margin: 0 0 80px 30px;
+}
 
 .box {
   display: flex;
@@ -144,7 +144,6 @@ h4 {
 p {
   margin: 4%;
   font-size: 110%;
-
 }
 
 body {
@@ -160,8 +159,8 @@ h2 {
 }
 b {
   font-size: 30px;
+}
 
 i:hover {
   -webkit-text-stroke: 1px;
-
 }
