--- a/style.css
+++ b/style.css
@@ -2,44 +2,24 @@
 
     display: flex;
     background-color: #F8F9FB;
-    width: 750px;
-    height: 175px;
+    width: 900px;
+    height: 300px;
     position: relative;
    
   }
 
-.squareOne {
+.square {
 
   display: flex;
   background-color: white;
-  width: 200px;
-  height: 150px;
+  width: 275px;
+  height: 200px;
   margin: auto;
   border-radius: 10px;
   justify-content: center;
+  flex-direction: row;
 }
 
-.squareTwo {
-
-  display: flex;
-  background-color: rgb(238, 18, 18);
-  width: 200px;
-  height: 150px;
-  margin: auto;
-  border-radius: 10px;
-  justify-content: center;
-}
-
-.squareThree {
-
-  display: flex;
-  background-color: rgb(238, 18, 18);
-  width: 200px;
-  height: 150px;
-  margin: auto;
-  border-radius: 10px;
-  justify-content: center;
-}
 
 .bi-slack {
 
@@ -47,42 +27,58 @@
   padding-top: 10px;
   position: relative;
   top: 0px;
-  right: 40px;
+  right: 25px;
   display: flex;
   
 
-}
-
-.titlePositionSlack {
-
-  position: relative; 
-  top: 5px;
-  right: 20px;
-  display: flex;
-
-  
 }
 
 .textPositionSlack {
 
-position: absolute;
-top: 75px;
-text-align: center;
-color: grey;
-display: flex;
+  position: absolute;
+  color: grey;
+  width: 200px;
+  height: 2em;
+  top: 115px;
+  text-align: center;
 
 }
 
 .textPositionTrello {
 
-  text-align: center;
+  position: absolute;
   color: grey;
+  width: 200px;
+  height: 2em;
+  top: 55px;
+}
 
-  }
+.textPositionWhatsapp {
+
+  position: absolute;
+  color: grey;
+  width: 200px;
+  height: 2em;
+  top: 55px;
+
+  
+}
 
 .circleBlue {
 
   background-color: #0079BF;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+  position: relative;
+  top: 10px;
+  right: 60px;
+  display: flex;
+}
+
+.circleGreen {
+
+  background-color: green;
   width: 50px;
   height: 50px;
   border-radius: 50px;
@@ -102,6 +98,26 @@ display: flex;
   
 }
 
+.bi-whatsapp {
+
+
+  color: white;
+  font-size: 30px;
+  position: absolute;
+  top: 8px;
+  left: 10px;
+  
+
+}
+
+.titlePositionSlack {
+
+  position: relative; 
+  top: 5px;
+  right: 20px;
+  display: flex;
+}
+
 .titlePositionTrello {
 
   position: absolute;
@@ -112,6 +128,71 @@ display: flex;
 
 }
 
-.titlePositionWapp {
+.titlePositionWhatsapp {
+
+  position: absolute;
+  left: 70px;
+  bottom: 5px;
+  display: flex;
+
+}
+
+.buttonInstallSlack {
+  background-color: #eb345e;
+  color: white;
+  border: 0px;
+  width: 100px;
+  height: 40px;
+  border-radius: 25px;
+  margin: 5px;
+  position: absolute;
+  bottom: 60px;
+  right: 625px;
+}
+
+.buttonOpen {
+  background: none;
+  color: #eb345e;
+  border: 10px 10px;
+  border-color: #eb345e;
+  border-radius: 25px;
+  width: 100px;
+  height: 40px;
+  margin: 5px;
+  position: absolute;
+  top: 130px;
+  left: 105px;
+}
+
+.buttonInstallWapp {
+  background-color: #eb345e;
+  color: white;
+  border: 0px;
+  width: 100px;
+  height: 40px;
+  border-radius: 25px;
+  margin: 5px;
+  position: absolute;
+  top: 130px;
+  left: 105px;
+}
+
+.checkboxInstall {
+
+  accent-color: #21ff51;
+  position: absolute;
+  top: 145px;
+  right: 60px;
+  
+
+}
+
+.installed {
+
+  position: absolute;
+  top: 130px;
+  color:#21ff51;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
 
 }
